--- a/index.html
+++ b/index.html
@@ -246,14 +246,13 @@
                 <div class="domain-and-contact">
                     <div class="social-media">
                         <a href="https://www.instagram.com/zakzakqy/" target="_blank">
-                            <i class="fa-brands fa-tiktok fa-2x" style="margin-right: 10px;"></i>@zakzakqy
+                            <i class="fa-brands fa-instagram fa-2x" style="margin-right: 10px;"></i>@zakzakqy
                           </a>
                           <br style="margin-right: 10px;"> </br>
                                 <p style="margin-right: 10px;"></p>
-                                <a href="https://www.instagram.com/zakzakqy/" target="_blank">
-                                    <i class="fa-brands fa-instagram fa-2x" style="margin-right: 10px;"></i>@zakzakqy
+                                <a href="https://www.tiktok.com/zakzakqy/" target="_blank">
+                                    <i class="fa-brands fa-tiktok fa-2x" style="margin-right: 10px;"></i>@zakzakqy
                                   </a>
-                                  
                     </div>
                 </div>
             </div>
