--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                           </a>
                           <br style="margin-right: 10px;"> </br>
                                 <p style="margin-right: 10px;"></p>
-                                <a href="https://www.tiktok.com/zakzakqy/" target="_blank">
+                                <a href="https://www.tiktok.com/@zakzakqy/" target="_blank">
                                     <i class="fa-brands fa-tiktok fa-2x" style="margin-right: 10px;"></i>@zakzakqy
                                   </a>
                     </div>
