--- a/index.html
+++ b/index.html
@@ -245,23 +245,21 @@
             <div class="sosmed-and-maps">
                 <div class="domain-and-contact">
                     <div class="social-media">
-                        <a href="https://www.instagram.com/zakzakqy/" target="_blank">
-                            <i class="fa-brands fa-instagram fa-2x" style="margin-right: 10px;"></i>@zakzakqy
-                          </a>
-                          <br style="margin-right: 10px;"> </br>
-                                <p style="margin-right: 10px;"></p>
-                                <a href="https://www.tiktok.com/@zakqyishere/" target="_blank">
+                                 <p style="margin-left: 175px;"></p>
+                                    <a href="https://www.instagram.com/zakzakqy/" target="_blank">
+                                 <i class="fa-brands fa-instagram fa-2x" style="margin-right: 10px;"></i>@zakzakqy
+                                 </a>
+                                 <br></br>
+                                 <p style="margin-right: 25px;"></p>
+                                 <a href="https://www.tiktok.com/@zakqyishere/" target="_blank">
                                     <i class="fa-brands fa-tiktok fa-2x" style="margin-right: 10px;"></i>@zakzakqy
                                   </a>
                     </div>
-                </div>
-            </div>
 
-            <div class="form-message">
+                <div class="form-message">
+               <form action="">
                 
-                <form action="">
-                  
-                </form>
+               </form>
             </div>
         </div>
     </section>
