--- a/index.html
+++ b/index.html
@@ -234,6 +234,45 @@
                     </div>
                 </div>
             </div>
+            <div class="field-certificate">
+                <img src="img/s5.PNG" alt="" class="img-certificate" data-aos="zoom-in">
+                <i class="fa-solid fa-eye fa-xl icon-eye"></i>
+                <div class="overlay-image-certificate">
+                    <div class="field-overlay-certificate">
+                        <i class="fa-solid fa-chevron-left fa-3x slide-before-image-certificate"></i>
+                        <img src="img/s5.PNG" alt="" class="img-certificate"
+                            id="overlay-image-certificate-4">
+                        <i class="fa-solid fa-chevron-right fa-3x slide-after-image-certificate"></i>
+                        <button>Close</button>
+                    </div>
+                </div>
+            </div>
+            <div class="field-certificate">
+                <img src="img/s6.PNG" alt="" class="img-certificate" data-aos="zoom-in">
+                <i class="fa-solid fa-eye fa-xl icon-eye"></i>
+                <div class="overlay-image-certificate">
+                    <div class="field-overlay-certificate">
+                        <i class="fa-solid fa-chevron-left fa-3x slide-before-image-certificate"></i>
+                        <img src="img/s6.PNG" alt="" class="img-certificate"
+                            id="overlay-image-certificate-4">
+                        <i class="fa-solid fa-chevron-right fa-3x slide-after-image-certificate"></i>
+                        <button>Close</button>
+                    </div>
+                </div>
+            </div>
+            <div class="field-certificate">
+                <img src="img/s7.PNG" alt="" class="img-certificate" data-aos="zoom-in">
+                <i class="fa-solid fa-eye fa-xl icon-eye"></i>
+                <div class="overlay-image-certificate">
+                    <div class="field-overlay-certificate">
+                        <i class="fa-solid fa-chevron-left fa-3x slide-before-image-certificate"></i>
+                        <img src="img/s7.PNG" alt="" class="img-certificate"
+                            id="overlay-image-certificate-4">
+                        <i class="fa-solid fa-chevron-right fa-3x slide-after-image-certificate"></i>
+                        <button>Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!--Certification -->
