--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3>Fans King MU <span>| Informatics </span></h3>
             </div>
             <div class="field-image-home">
-                <img src="img/pp.jpeg" alt="">
+                <img src="img/ppbaru.jpg" alt="">
             </div>
         </div>
         <a class="swipe-up" href="#about">Swipe Up <i class="fa-solid fa-arrow-down arrow-swipeup"></i></a>
