--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="field-image-skill">
                 <img src="img/logo_talwind.png" alt="" class="image-skill">
-                <span>TALWIND</span>
+                <span>TAILWIND</span>
             </div>
             <div class="field-image-skill">
                 <img src="img/logo_reactjs.png" alt="" class="image-skill">
